log
Sat, May  3, 2025  6:01:12 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  6:13:02 PM: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  3|7
total_score: 5/70
1d982ed
Sat, May  3, 2025  7:05:20 PM: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key) != NULL) return;
         ^~~~~~~~~~~~
treemap.c:52:33: error: comparison between pointer and integer [-Werror]
     if (searhTreeMap(tree, key) != NULL) return;
                                 ^~
treemap.c: At top level:
treemap.c:113:5: error: expected identifier or '(' before 'return'
     return NULL;
     ^~~~~~
treemap.c: In function 'searchTreeMap':
treemap.c:112:5: error: control reaches end of non-void function [-Werror=return-type]
     }
     ^
cc1.exe: all warnings being treated as errors
43b8b8d
Sat, May  3, 2025  7:06:14 PM: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key) != NULL) return;
         ^~~~~~~~~~~~
treemap.c:52:33: error: comparison between pointer and integer [-Werror]
     if (searhTreeMap(tree, key) != NULL) return;
                                 ^~
cc1.exe: all warnings being treated as errors
1b600b7
Sat, May  3, 2025  7:07:14 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:9: error: implicit declaration of function 'searhTreeMap' [-Werror=implicit-function-declaration]
     if (searhTreeMap(tree, key)) return;
         ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
78718f1
Sat, May  3, 2025  7:29:44 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
1732082
Sat, May  3, 2025  7:32:29 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 15/70
32045f1
Sat, May  3, 2025  7:41:05 PM: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:128:45: error: implicit declaration of function 'retur' [-Werror=implicit-function-declaration]
     if (tree == NULL || tree->root == NULL) retur NULL;
                                             ^~~~~
cc1.exe: all warnings being treated as errors
b53df7b
Sat, May  3, 2025  7:41:22 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 20/70
1634932
Sat, May  3, 2025  7:52:28 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  21|3
total_score: 35/70
2826fb3
Sat, May  3, 2025  7:56:13 PM: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:126:5: error: expected ')' before 'TreeNode'
     TreeNode * current = tree->root;
     ^~~~~~~~
treemap.c:141:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
d54e8b8
Sat, May  3, 2025  7:56:28 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:126:5: error: expected ')' before 'TreeNode'
     TreeNode * current = tree->root;
     ^~~~~~~~
treemap.c:141:1: error: expected expression before '}' token
 }
 ^
treemap.c:141:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
e247ca5
Sat, May  3, 2025  7:58:08 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:127:16: error: variable 'candidate' set but not used [-Werror=unused-but-set-variable]
     TreeNode * candidate = NULL;
                ^~~~~~~~~
cc1.exe: all warnings being treated as errors
4026678
Sat, May  3, 2025  7:59:31 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  21|3
total_score: 35/70
eed0c45
Sat, May  3, 2025  8:00:26 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|2
total_score: 45/70
4d94673
Sun, May  4, 2025  4:15:32 PM: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:91:27: error: expected identifier before '==' token
         if(node->parent-> == node) {
                           ^~
e90c7d0
Sun, May  4, 2025  4:16:00 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|2
total_score: 50/70
d461799
